--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.43.12",
+    "@slidev/cli": "^0.49.22",
     "@slidev/theme-default": "latest",
-    "@slidev/theme-seriph": "latest"
+    "@slidev/theme-seriph": "latest",
+    "global": "^4.4.0"
   }
 }
